fix border and horizontal scroll issue in html

--- a/css/style.css
+++ b/css/style.css
@@ -140,6 +140,7 @@ a {
 
 .top-story-image {
   height: 100%;
+  width: 100%;
 }
 
 .feature-title {
